--- a/homedomotics-sensors/Makefile
+++ b/homedomotics-sensors/Makefile
@@ -1,5 +1,5 @@
-obj-m += homedomotics-sensors.o
+obj-m += dht11-module.o
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(pwd) modules
+	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(pwd) clean
+	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) clean
