Fix compilation errors and added setp in the makefile, which creates de obj directory before compiling

--- a/homedomotics-sensors/user/Makefile
+++ b/homedomotics-sensors/user/Makefile
@@ -15,6 +15,7 @@ _OBJ = dht11-user.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.c $(DEPS)
+	mkdir -p $(ODIR)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 dht11: $(OBJ)
