Firt version of mq135 module

--- a/homedomotics-sensors/drivers/Makefile
+++ b/homedomotics-sensors/drivers/Makefile
@@ -1,4 +1,4 @@
-obj-m += dht11-module.o
+obj-m += dht11-module.o mq135-module.o
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
 clean:
