--- a/homedomotics-sensors/dts/dht11-module.dts
+++ b/homedomotics-sensors/dts/dht11-module.dts
@@ -2,7 +2,7 @@
 /plugin/;
 / {
     compatible = "brcm,bcm2835", "brcm,bcm2836", "brcm,bcm2708", "brcm,bcm2709", "brcm,bcm2711";
-    @fragment0 {
+    fragment@0 {
         target-path = "/";
         __overlay__ {
             dht11_module_device {
