User space programs
Created a user space program for ky004, and re organized dht11

--- a/homedomotics-sensors/user/ky004/Makefile
+++ b/homedomotics-sensors/user/ky004/Makefile
@@ -1,24 +1,24 @@
-IDIR =../include
+IDIR =../../include
 CC=gcc
 CFLAGS=-I$(IDIR)
 
 ODIR=obj
-LDIR =../lib
+LDIR =../../lib
 LIBS=
 
-_DEPS = dht11-data.h
+_DEPS = ky004-data.h
 # patsubst:Finds whitespace-separated words in text(_DEPS) that match pattern(%) and replaces them with replacement($(IDIR)%)
 # ‘%’ is replaced by the text that matched the ‘%’ in pattern. (only the first % istreated this way, it can be escaped with \)
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = dht11-user.o
+_OBJ = ky004-user.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.c $(DEPS)
 	mkdir -p $(ODIR)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-dht11: $(OBJ)
+ky004: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
