Modifies KY004 DTS
We were missing the interrupt related properties

--- a/homedomotics-sensors/dts/ky004-module.dts
+++ b/homedomotics-sensors/dts/ky004-module.dts
@@ -9,6 +9,8 @@
                 compatible = "calvarez,ky004";
                 button-gpio = <&gpio 27 0>; //GPIO_ACTIVE_HIGH is 0
                 led-gpio = <&gpio 22 1>;
+                interrupt-parent = <&gpio>;
+                interrupts = <27 2>; // <pin triggering: 2 is edge falling>
             };
         };
     };
